[gd_scene load_steps=7 format=3 uid="uid://dnwiujgohti1t"]

[ext_resource type="Script" path="res://main.gd" id="1_fufbd"]
[ext_resource type="PackedScene" uid="uid://84uqjf28t74c" path="res://player.tscn" id="1_o1cr5"]
[ext_resource type="PackedScene" uid="uid://bneqbp875aj52" path="res://mob.tscn" id="2_kvgc2"]
[ext_resource type="PackedScene" uid="uid://bg4yvuw6nxycr" path="res://hud.tscn" id="4_tkg68"]
[ext_resource type="Script" path="res://addons/godot_rl_agents/sync.gd" id="5_mr2gr"]

[sub_resource type="Curve2D" id="Curve2D_lbcgc"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 478, -2, 0, 0, 0, 0, 482, 716, 0, 0, 0, 0, -1, 712, 0, 0, 0, 0, 0, 6, 0, 0, 0, 0, 1, 1)
}
point_count = 6

[node name="Main" type="Node"]
script = ExtResource("1_fufbd")
mob_scene = ExtResource("2_kvgc2")

[node name="Player" parent="." instance=ExtResource("1_o1cr5")]
metadata/_edit_group_ = true

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_lbcgc")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(1, 1)
rotation = -0.00628923

[node name="HUD" parent="." instance=ExtResource("4_tkg68")]

[node name="Sync" type="Node" parent="."]
script = ExtResource("5_mr2gr")

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
